# OpenSlides

./: .gitignore  .prettierignore  .prettierrc.json  CODEBASE_INDEX.md  LICENSE  MIGRATION.md  README.md  eslint.config.js  index.html  knip.json  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  DND.md  HIGHLIGHT_PIPELINE.md  SAVE_PIPELINE.md  STATE.md
release-notes/: 1.0.0-beta.1.md  1.0.1.md  1.0.2.md  1.0.21.md  1.0.3.md  1.2.0.md
scripts/: extract-release-note.mjs  run-highlight-tests.mjs  run-present-tests.mjs  run-save-race-tests.mjs  run-stack-targeting-tests.mjs
scripts/lib/: esbuild-svelte.mjs
src/: App.svelte  App.tsx  constants.ts  index.css  main.ts  main.tsx  types.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  db.rs  error.rs  highlight.rs  lib.rs  lifecycle.rs  main.rs  merustmar.rs  models.rs
src-tauri/src/commands/: helpers.rs  highlight.rs  highlight_measure.rs  io.rs  merustmar.rs  mod.rs  projects.rs  quit.rs  search.rs  slides.rs  stacks.rs
src-tauri/src/commands/shared/: dialogs.rs  mod.rs  naming.rs  project_queries.rs  slide_queries.rs
src-tauri/src/commands/stacks/: mod.rs  projects.rs  slides.rs
src-tauri/src/db/: migrations.rs  mod.rs  pool.rs  schema.rs
src-tauri/src/services/: duplication.rs  highlights.rs  import.rs  mod.rs
src-tauri/tests/fixtures/merustmar/: parity.json
src/app/: App.svelte  main.ts  routes.ts
src/components/: BottomSlidesPanel.svelte  BottomSlidesPanel.tsx  CodeEditor.svelte  CodeEditor.tsx  CommandPalette.svelte  CommandPalette.tsx  Dashboard.svelte  Dashboard.tsx  Editor.svelte  Editor.tsx  GoToSlideDialog.svelte  GoToSlideDialog.tsx  HighlightContextMenu.svelte  HighlightContextMenu.tsx  HighlightLayer.svelte  HighlightLayer.tsx  HighlightSettingsPanel.svelte  HighlightSettingsPanel.tsx  HighlightStepIndicator.svelte  HighlightStepIndicator.tsx  Redirect.svelte  RenderBoundary.svelte  RenderErrorBoundary.tsx  SettingsDrawer.svelte  SettingsDrawer.tsx  (+6 more)
tests/: app-flow.test.mts  codeeditor-typing.test.mts  editor-history.test.mts  editor-save-race.test.mts  highlight-tokens.test.mts  highlight-utils-cache.test.mts  present-flow.test.mts  shiki-e2e.check.mjs  stack-targeting.test.mts
(+516 files in other folders)
