[package]
name = "open-slides"
version = "0.1.0"
description = "OpenSlides — offline-first code presentation desktop app"
authors = ["codewiththiha"]
edition = "2024"

[lib]
name = "open_slides_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
# Runtime-only sqlx — no `macros` feature.
# The macros proc-macro dylib can corrupt on macOS release builds
# ("mis-aligned LINKEDIT string pool"). We only use sqlx::query / query_as.
sqlx = { version = "0.8", default-features = false, features = [
  "runtime-tokio",
  "sqlite",
] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
once_cell = "1"
lru = "0.12"
aho-corasick = "1"
